--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/hls.js/dist/hls.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -119,6 +122,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "videoScreen"
+    }
+  },
+  "defaultProject": "videoScreen",
+  "cli": {
+    "analytics": "41dfdd8d-c9e7-414b-8572-dd80bf3f680d"
+  }
 }
